Make entities, orm, symfony fixtures

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -12,7 +12,7 @@
                         <div class="card">
                             <img src="https://picsum.photos/200/200" class="img-fluid" alt="image du produit">
                             <div class="card-body">
-                                <h4 class="card-title">Superbe chaise en bois</h4>
+                                <h4 class="card-title">Chaise en bois</h4>
                                 <p class="card-text">Lorem ipsum dolor sit amet,
                                     consectetur adipisicing elit. Repudiandae, sed!</p>
                                 <a href="#" class="btn btn-primary btn-sm">Détails</a>
