--- a/templates/product/category.html.twig
+++ b/templates/product/category.html.twig
@@ -6,7 +6,7 @@
 
     {# https://bootswatch.com/lumen/ -> breadcrumb #}
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
         <li class="breadcrumb-item active">{{ category.name }}</li>
     </ol>
 
@@ -22,7 +22,8 @@
                         <h4 class="card-title">{{ p.name }} ({{ p.price / 1000 }} &euro;)</h4>
                         <span class="badge badge-info">{{ category.name }}</span>
                         <p class="card-text">{{ p.shortDescription }}</p>
-                        <a href="#" class="btn btn-primary btn-sm">Détails</a>
+                        <a href="{{ path('product_show', {'category_slug': p.category.slug,
+                        'slug': p.slug}) }}" class="btn btn-primary btn-sm">Détails</a>
                         <a href="#" class="btn btn-success btn-sm">Ajouter</a>
                     </div>
                 </div>
