--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -7,8 +7,8 @@
 {% block body %}
     {# https://bootswatch.com/lumen/ -> breadcrumb #}
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-        <li class="breadcrumb-item"><a href="#">{{ product.category.name }}</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('product_category', {'slug': product.category.slug}) }}">{{ product.category.name }}</a></li>
         <li class="breadcrumb-item active">{{ product.name }}</li>
     </ol>
 
