--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -1,12 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
-    Création d'un produit
-{% endblock %}
+{% block title %}Création d'un produit{% endblock %}
 
 {% block body %}
     <h1>Nouveau produit</h1>
 
-    {{ form(formView) }}
-
+    {{ form_start(formView) }}
+    {{ form_errors(formView) }}
+    <div class="row">
+        <div class="col">
+            {{ form_row(formView.name) }}
+            {{ form_row(formView.price) }}
+        </div>
+        <div class="col">
+            {{ form_row(formView.category) }}
+            {{ form_row(formView.shortDescription) }}
+        </div>
+    </div>
+    <button type="submit" class="btn btn-primary"><i class="fas fa-save fa-lg"></i>
+        Créer le produit
+    </button>
+    {{ form_end(formView) }}
 {% endblock %}
