--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -12,7 +12,8 @@
         <li class="breadcrumb-item active">{{ product.name }}</li>
     </ol>
 
-    <h1>{{ product.name }} ({{ product.price / 100 }} €)</h1>
+    {#<h1>{{ product.name }} ({{ product.price / 100 }} €)</h1>#}
+    <h1>{{ product.name }} ({{ product.price }} €)</h1>
 
     <div class="row">
         <div class="col-4">
