Mise en place de la validation des produits

--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -13,7 +13,7 @@
     </ol>
 
     {#<h1>{{ product.name }} ({{ product.price / 100 }} €)</h1>#}
-    <h1>{{ product.name }} ({{ product.price }} €)</h1>
+    <h1>{{ product.name }} ({{ product.price / 100 }} €)</h1>
 
     <div class="row">
         <div class="col-4">
