--- a/templates/product/edit.html.twig
+++ b/templates/product/edit.html.twig
@@ -6,6 +6,8 @@
 
     <h1>Editer le produit {{ product.name }}</h1>
 
+    {#{{ form_start(formView, {'attr': {'novalidate': 'novalidate'}}) }}#}
+
     {{ form_start(formView) }}
     {{ form_errors(formView) }}
     <div class="row">
