validation, globals into twig.yaml for categories in menu from CategoryRepository

--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -6,7 +6,7 @@
 
     <h1>Editer la catégorie {{ category.name }}</h1>
 
-    {{ form_start(formView) }}
+    {{ form_start(formView, {'attr': {'novalidate': 'novalidate'}}) }}
     {{ form_errors(formView) }}
 
     <div class="row">
