--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -16,9 +16,12 @@
             {% endfor %}
         </ul>
         <ul class="navbar-nav">
-            <li class="nav-item"><a href="#" class="nav-link">Inscription</a></li>
-            <li class="nav-item"><a href="#" class="btn btn-success">login</a></li>
-            <li class="nav-item"><a href="#" class="btn btn-danger">logout</a></li>
+            {% if app.user %}
+                <li class="nav-item"><a href="{{ path('security_logout') }}" class="btn btn-danger">logout</a></li>
+            {% else %}
+                <li class="nav-item"><a href="#" class="nav-link">Inscription</a></li>
+                <li class="nav-item"><a href="{{ path('security_login') }}" class="btn btn-success">login</a></li>
+            {% endif %}
         </ul>
         
         {#<form class="form-inline my-2 my-lg-0">#}
