SessionInterface & FlashBags & Twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,16 @@
     <body>
     {% include "shared/_navbar.html.twig" %}
     <div class="container pt-5 pb-3">
+        
+        {# Afficher les Flashbags #}
+        {% for rubrique, messages in app.flashes %}
+            <div class="div alert alert-{{ rubrique }}">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endfor %}
+
         {% block body %}{% endblock %}
     </div>
     </body>
