--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -6,6 +6,10 @@
 
 {% block body %}
     {# https://bootswatch.com/lumen/ -> breadcrumb #}
+
+    {#{{ dump(app.session.getBag('flashes').get('success')) }}#}
+    {#{{ dump(app.flashes('success')) }}#}
+
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
         <li class="breadcrumb-item"><a href="{{ path('product_category', {'slug': product.category.slug}) }}">{{ product.category.name }}</a></li>
