--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -13,19 +13,10 @@
         <div class="row">
         {% for p in products %}
                     <div class="col-sm">
-                        <div class="card">
-                            <img src="{{ p.mainPicture }}" class="img-fluid" alt="image de {{ p.name }}">
-                            <div class="card-body">
-                                <h4 class="card-title">{{ p.name }} ({{ p.price / 100 }} &euro;)</h4>
-                                <span class="badge badge-info">{{ p.category.name }}</span>
-                                <p class="card-text">{{ p.shortDescription }}</p>
-                                <a href="{{ path('product_show', {
-                                    'category_slug': p.category.slug,
-                                    'slug': p.slug
-                                }) }}" class="btn btn-primary btn-sm">Détails</a>
-                                <a href="{{ path('cart_add', {'id': p.id}) }}" class="btn btn-success btn-sm">Ajouter</a>
-                            </div>
-                        </div>
+                        {% include 'product/_product_card.html.twig' %}
+                        {# si p était product: #}
+                        {#{% include 'product/_product_card.html.twig'#}
+                        {#with {'p': product}%}#}
                     </div>
         {% endfor %}
         </div>
