--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -19,9 +19,10 @@
             {% for item in items %}
                 <tr>
                     <td>{{ item.product.name }}</td>
-                    <td>{{ (item.product.price) / 100 }}</td>
+                    <td>{{ item.product.price / 100 }}</td>
                     <td>{{ item.qty }}</td>
-                    <td>{{ (item.qty * item.product.price) / 100 }}</td>
+                    {#<td>{{ (item.qty * item.product.price) / 100 }}</td>#}
+                    <td>{{ item.total / 100 }}</td>
                 </tr>
             {% endfor %}
         </tbody>
