--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -13,6 +13,7 @@
             <th>Prix</th>
             <th>Quantité</th>
             <th>Total</th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
@@ -23,13 +24,18 @@
                     <td>{{ item.qty }}</td>
                     {#<td>{{ (item.qty * item.product.price) / 100 }}</td>#}
                     <td>{{ item.total / 100 }}</td>
+                    <td>
+                        <a href="{{ path('cart_delete', {'id': item.product.id}) }}" class="btn btn-sm btn-danger">
+                            <i class="fas fa-trash"></i>
+                        </a>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
         <tfoot>
             <tr>
                 <td colspan="3">Total: </td>
-                <td>{{ total / 100 }}</td>
+                <td colspan="2">{{ total / 100 }}</td>
             </tr>
         </tfoot>
     </table>
