--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -25,6 +25,11 @@
             </li>
 
             {% if app.user %}
+                <li class="nav-item">
+                    <a href="{{ path('purchases_index') }}" class="nav-link">
+                        Mes commandes
+                    </a>
+                </li>
                 <li class="nav-item"><a href="{{ path('security_logout') }}" class="btn btn-danger">logout</a></li>
             {% else %}
                 <li class="nav-item"><a href="#" class="nav-link">Inscription</a></li>
