ManyToMany Purchase-Product, purchase view, refactoring PurchaseController thanks to AbstractController

--- a/templates/purchase/index.html.twig
+++ b/templates/purchase/index.html.twig
@@ -14,6 +14,7 @@
             <th>Numéro</th>
             <th>Adresse</th>
             <th>Date de commande</th>
+            <th>Produits</th>
             <th>Total</th>
         </tr>
         </thead>
@@ -24,6 +25,14 @@
                     <td>{{ p.address }}<br>{{ p.postalCode }}, {{ p.city }}</td>
                     {#<td>{{ p.purchasedAt.format('d/m/Y') }}</td>#}
                     <td>{{ p.purchasedAt | date('d/m/Y - H:i') }}</td>
+                    <td>
+                        <ul>
+                            {# Twig appelle getProducts sur la purchase (méthode Entité Purchase) #}
+                            {% for product in p.products %}
+                                <li>{{ product.name }} ({{ product.price / 100 }}) €</li>
+                            {% endfor %}
+                        </ul>
+                    </td>
                     <td>{{ p.total / 100 }} €</td>
                 </tr>
             {% endfor %}
