--- a/templates/purchase/payment.html.twig
+++ b/templates/purchase/payment.html.twig
@@ -6,4 +6,75 @@
 
     <h1>Payez votre commande avec Stripe</h1>
 
+    <form id="payment-form">
+        <div id="card-element">
+            <!--Stripe.js injects the Card Element-->
+        </div>
+        <button id="submit" class="btn btn-success">
+            <div class="spinner hidden" id="spinner"></div>
+            <span id="button-text">Payez avec Stripe !</span>
+        </button>
+        <p id="card-error" role="alert"></p>
+    </form>
+
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://js.stripe.com/v3/"></script>
+    <script>
+        const clientSecret = '{{ clientSecret }}';
+        const stripe = Stripe("pk_test_TYooMQauvdEDq54NiTphI7jx");
+        const elements = stripe.elements();
+        var style = {
+            base: {
+            color: "#32325d",
+            fontFamily: 'Arial, sans-serif',
+            fontSmoothing: "antialiased",
+            fontSize: "16px",
+            "::placeholder": {
+            color: "#32325d"
+            }
+        },
+            invalid: {
+            fontFamily: 'Arial, sans-serif',
+            color: "#fa755a",
+            iconColor: "#fa755a"
+            }
+        };
+
+        const card = elements.create("card", { style: style });
+
+        // Stripe injects an iframe into the DOM
+        card.mount("#card-element");
+        card.on("change", function (event) {
+            // Disable the Pay button if there are no card details in the Element
+            document.querySelector("button").disabled = event.empty;
+            document.querySelector("#card-error").textContent = event.error ? event.error.message : "";
+        });
+
+        const form = document.getElementById("payment-form");
+
+        form.addEventListener("submit", function(event) {
+            event.preventDefault();
+
+        // Complete payment when the submit button is clicked
+            stripe
+                .confirmCardPayment(clientSecret, {
+                    payment_method: {
+                        card: card
+                    }
+                })
+                .then(function(result) {
+                    if (result.error) {
+                        // Show error to your customer
+                        console.log(result.error.message);
+                    } else {
+                        // The payment succeeded!
+                        console.log(result);
+                    }
+                });
+            });
+    </script>
+
 {% endblock %}
