--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -26,7 +26,7 @@
 
             {% if app.user %}
                 <li class="nav-item">
-                    <a href="{{ path('purchases_index') }}" class="nav-link">
+                    <a href="{{ path('purchase_index') }}" class="nav-link">
                         Mes commandes
                     </a>
                 </li>
