--- a/templates/emails/product_view.html.twig
+++ b/templates/emails/product_view.html.twig
@@ -15,6 +15,6 @@
 <h2>Détails du produit:</h2>
 
 <ul>
-    <li>Prix: {{ product.price }}</li>
+    <li>Prix: {{ product.price|amount }}</li>
     <li>Slug: {{ product.slug }}</li>
 </ul>
