--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -17,7 +17,7 @@
     </ol>
 
     {#<h1>{{ product.name }} ({{ product.price / 100 }} €)</h1>#}
-    <h1>{{ product.name }} ({{ product.price / 100 }} €)</h1>
+    <h1>{{ product.name }} ({{ product.price|amount}})</h1>
 
     <div class="row">
         <div class="col-4">
