--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -20,7 +20,7 @@
             <li class="nav-item">
                 <a href="{{ path('cart_show') }}" class="nav-link">
                     <i class="fas fa-shopping-cart"></i>
-                    Panier ({{ cartService.total / 100 }} €)
+                    Panier ({{ cartService.total|amount}})
                 </a>
             </li>
 
